--- a/ch15/text_formatting/Makefile
+++ b/ch15/text_formatting/Makefile
@@ -1,16 +1,19 @@
-justify:		justify.o word.o line.o
-			gcc -o justify justify.o word.o line.o
+justify:	justify.o word.o line.o
+	gcc -o justify justify.o word.o line.o
 
 justify.o:	justify.c word.h line.h
-			gcc -c justify.c
+	gcc -c justify.c
 
-word.o:			word.c word.h
-			gcc -c word.c
+word.o:		word.c word.h
+	gcc -c word.c
 
-line.o:			line.c line.h
-			gcc -c line.c
+line.o:		line.c line.h
+	gcc -c line.c
 
-.PHONY:			clean
+.PHONY:		clean fclean
 
 clean:
-			rm *.o justify
+	rm *.o
+
+fclean:
+	rm justify
